# rumpy

./: Cargo.toml  Gemfile  README.md  Rakefile  rumpy.gemspec
.github/workflows/: ci.yml
ext/rumpy/: Cargo.toml  extconf.rb
ext/rumpy/src/: array.rs  creation.rs  lib.rs  linalg.rs  math.rs  random.rs  stats.rs
lib/: rumpy.rb
lib/rumpy/: version.rb
spec/: array_spec.rb  linalg_spec.rb  math_spec.rb  random_spec.rb  spec_helper.rb  stats_spec.rb
